--- a/style.css
+++ b/style.css
@@ -59,7 +59,20 @@ p {
     text-align: center;
     font-size: 20px;
   }
-
+  #Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+  }
+  #subContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+  }
   #postMainContainer p {
     font-family: 'Open Sans', sans-serif;
     width: 100%;
